2008-08-07  Sancho Lerena <slerena@gmail.com>
	
	* bin/pandora_server: Disabled downtime server code until
	we can review changes in db structure from new code / console.

2008-08-05  Sancho Lerena <slerena@gmail.com>

	* bin/pandora_recon: New functional recon server. It implements 
	different recon tasks based on OS type. Uses a production/consumer
	thread model, detec OS typew and assign automatically network profiles
	(including new WMI components) and WMI, Plugin, Network and Prediction
	servers, taken the first master server that could found. Uses xprobe2
	external tool to detect remote OS.

	* Makefile.PL: Added new dependencies (HTML::Entities), and new
	binary tool for controlled time executing (pandora_exec), used now
	by pandora_wmi and pandora_plugin.

	* Config.pm: Fixed problem parsing xprobe2 command.

	* DB.pm: Functions pandora_create_agent() and pandora_event() moved
	from Tools.pm to here. Removed some old DEBUG messages.

	* Tools.pm: Moved pandora_create_agent() and pandora_event() to DB.pm

2008-08-01  Ramon Novoa  <rnovoa@artica.es>

	* bin/pandora_wmi: Removed the timeout mechanism.
	* bin/pandora_plugin: Removed the timeout mechanism. pandora_exec is
	  used instead.

2008-07-31  Ramon Novoa  <rnovoa@artica.es>

	* util/pandora_exec: Added to repository. Perl script to control
	  command execution timeouts.

2008-07-30  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DB.pm,
	  bin/pandora_wmi: Small fixes.

2008-07-30  Sancho Lerena <slerena@gmail.com>

	* lib/PandoraFMS/DB.pm: FIXED a stupid bug that makes impossible to 
	process any data :(. This bug was introducted by me at 25 July.

2008-07-29  Ramon Novoa  <rnovoa@artica.es>

	* bin/pandora_wmi: Small fixes.

2008-07-25  Sancho Lerena <slerena@gmail.com>

	* pandora_network: Added a defined() check for tcp_send string.

	* pandora_server: Added call to function pandora_planned_downtime().
	This implements planned downtimes on data server only.
